--- a/medial-queries3/index.html
+++ b/medial-queries3/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="a">a</div>
+      <header>a</header>
+      
+        <aside>
       <div class="b">b</div>
       <div class="c">c</div>
       <div class="d">d</div>
@@ -15,6 +17,10 @@
       <div class="f">f</div>
       <div class="g">g</div>
       <div class="h">h</div>
-    </div>
-  </body>
-</html>
+    </aside>
+    <main>h</main>
+  </div>
+  </div>
+  </div>
+</body>
+  </html>
